--- a/apworlds.html
+++ b/apworlds.html
@@ -569,7 +569,7 @@
                 <ul>
                     <li><strong>APWorld + Connector</strong> [<a href="https://github.com/jjjj12212/Archipelago-BanjoTooie/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Ozone31/banjo-tooie-ap-tracker/releases">Link</a>]</li>
-                    <li><strong>Universal Tracker Support</strong> Yes</li>
+                    <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/jjjj12212/Archipelago-BanjoTooie/blob/main/worlds/banjo_tooie/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1135352499172286505">Link</a>]</li>
                 </ul>
@@ -834,6 +834,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/pwkfisher/ap-dkc2-tracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1023381145565548646">Link</a>]</li>
                 </ul>
 
@@ -1483,6 +1484,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/BrianCumminger/megamanx-ap-poptracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1134349743984742520">Link</a>]</li>
                 </ul>
                 
@@ -1491,6 +1493,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/BrianCumminger/megamanx2-ap-poptracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1232388647127613490">Link</a>]</li>
                 </ul>
 
@@ -1499,6 +1502,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/BrianCumminger/megamanx3-ap-poptracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1148331400542568558">Link</a>]</li>
                 </ul>
 
@@ -1586,7 +1590,6 @@
                 <ul>
                     <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1291149795699720232">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1290806222731088035">Link</a>]</li>
-                    <li><strong>Universal Tracker Support</strong> No</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1196920710724071555">Link</a>]</li>
                 </ul>
 
