--- a/apworlds.html
+++ b/apworlds.html
@@ -52,7 +52,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (225)</h2>
+                <h2>APWorlds (226)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -99,6 +99,7 @@
                 <small>&emsp;<a href="#Celeste">Celeste (PC)</a></small>
                 <small>&emsp;<a href="#Celeste64">Celeste 64 (PC)</a></small>
                 <br />
+                <small><a href="#ChainedEchoes">Chained Echoes (PC)</a></small>
                 <small><a href="#ChecksFinder">ChecksFinder (PC)</a></small>
                 <small><a href="#ChecksMate">ChecksMate (PC)</a></small>
                 <small><a href="#ChronoTrigger">Chrono Trigger (SNES)</a></small>
@@ -682,7 +683,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1021069526625947729/1266000112715436114">Link</a>]</li>
-                    <li><strong>Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1021069526625947729/1296642378022649866">Link</a>]</li>
+                    <li><strong>Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1021069526625947729/1315720564035293248">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/seto10987/Celeste-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/doshyw/Archipelago/blob/celeste/worlds/celeste/docs/celeste_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1021069526625947729">Link</a>]</li>
@@ -699,6 +700,13 @@
                 </ul>
 
                 <hr />
+
+                <h3><span id="ChainedEchoes"></span> Chained Echoes (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Samupo/ChainedEchoesRandomizer/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1306059155899154493">Link</a>]</li>
+                </ul>
 
                 <h3><span id="ChecksFinder"></span> ChecksFinder (PC)</h3>
 
@@ -925,7 +933,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Alternate APWorld</strong> Space Age Without Space - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1311946326040383589/1313003038465724516">Link</a>]</li>
+                    <li><strong>Alternate APWorld</strong> Space Age Without Space - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1311946326040383589/1315532805203300352">Link</a>]</li>
                     <li><strong>Alternate Game Mod</strong> Space Age Without Space [<a href="https://mods.factorio.com/mod/SpaceAgeWithoutSpace">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Factorio/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/827139809763262525">Link</a>]</li>
@@ -1254,6 +1262,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Beta APWorld</strong> [<a href="https://github.com/gaithernOrg/ArchipelagoKH1FM/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/OpenKH/OpenKh/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Lojtana/Kingdom-Hearts-FM-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Kingdom%20Hearts/kh1/en">Link</a>]</li>
@@ -1615,6 +1624,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1269092909081432169/1313727681111527487">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Cyb3RGER/minecraft_rando_tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Minecraft/minecraft/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/837136185662111746">Link</a>]</li>
@@ -1708,7 +1718,6 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Ixrec/OuterWildsArchipelagoRandomizer/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong> 
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Ixrec/OuterWildsArchipelagoRandomizer/blob/main/README.md#installation">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1178700404637311086">Link</a>]</li>
                 </ul>
@@ -2203,7 +2212,7 @@
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/LittleCube-hax/MMRecompRando/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/seto10987/Majoras-Mask-AP-PopTracker-Pack/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/LittlestCube/Zelda64Recomp/blob/master/README.md">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/LittleCube-hax/MMRecompRando/blob/main/README.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1064439510806564925">Link</a>]</li>
                 </ul>
 
@@ -2281,6 +2290,7 @@
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Jarno458/TsRandomizer/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> 1.31.x releases [<a href="https://github.com/Jarno458/TsRandomizer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> In-Game Tracker</li>
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Timespinner/setup/en">Link</a>]</li>
