--- a/index.html
+++ b/index.html
@@ -49,6 +49,68 @@
                     </p>
                 </header>
 
+                <h2 id="W202449">Week of December 2-8, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Archipela-Go! [<a href="apworlds.html#Archipela-Go">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Kindergarten 2 [<a href="apworlds.html#Kindergarten2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mindustry [<a href="apworlds.html#Mindustry">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Osu! [<a href="apworlds.html#Osu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Rabi-Ribi [<a href="apworlds.html#RabiRibi">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 2 (Remake) [<a href="apworlds.html#ResidentEvil2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shadow the Hedgehog [<a href="apworlds.html#ShadowTheHedgehog">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> The Legend of Zelda: Link's Awakening DX [<a href="apworlds.html#TheLegendOfZeldaLinksAwakeningDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Celeste [<a href="apworlds.html#Celeste">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lingo [<a href="apworlds.html#Lingo">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 2 (Remake) [<a href="apworlds.html#ResidentEvil2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shivers [<a href="apworlds.html#Shivers">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Chained Echoes [<a href="apworlds.html#ChainedEchoes">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>New Beta APWorld</strong> KINGDOM HEARTS FINAL MIX [<a href="apworlds.html#KINGDOMHEARTSFINALMIX">Link</a>]</li>
+                    <li><strong>New Beta APWorld</strong> Minecraft [<a href="apworlds.html#Minecraft">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>New Beta Game Mod</strong> Timespinner [<a href="apworlds.html#Timespinner">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game Merged</strong> Saving Princess [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3238">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202448">Week of November 25 - December 1, 2024</h2>
 
                 <ul>
