--- a/apworlds.html
+++ b/apworlds.html
@@ -52,12 +52,13 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (226)</h2>
+                <h2>APWorlds (229)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
                 <small>&emsp;<a href="#LocalYAMLCreator">Local YAML Creator (Meta)</a></small>
+                <small>&emsp;<a href="#Shahrazad">Shahrazad (Meta)</a></small>
                 <small>&emsp;<a href="#SpoilerFreeTextClient">Spoiler-Free Text Client (Meta)</a></small>
                 <small>&emsp;<a href="#UniversalTracker">Universal Tracker (Meta)</a></small>
                 <br />
@@ -196,6 +197,7 @@
                 <small><a href="#LilGatorGame">Lil Gator Game (PC)</a></small>
                 <small><a href="#Lingo">Lingo (PC)</a></small>
                 <small><a href="#LittleWitchNobeta">Little Witch Nobeta (PC)</a></small>
+                <small><a href="#LoonylandHalloweenHill">Loonyland: Halloween Hill (PC/Web)</a></small>
                 <small><a href="#Lufia2RiseOfTheSinistrals">Lufia II: Rise of the Sinistrals (SNES)</a></small>
                 <small><a href="#Lunacid">Lunacid (PC)</a></small>
                 <br />
@@ -328,6 +330,7 @@
                 <small><a href="#ToejamAndEarl">Toejam & Earl (GEN)</a></small>
                 <small><a href="#TouhouKoumakyouTheEmbodimentOfScarletDevil">Touhou Koumakyou: The Embodiment of Scarlet Devil (PC)</a></small>
                 <small><a href="#TUNIC">TUNIC (PC)</a></small>
+                <small><a href="#TurnipBoyCommitsTaxEvasion"> Turnip Boy Commits Tax Evasion (PC)</a></small>
                 <small><a href="#Tyrian">Tyrian (PC)</a></small>
                 <small><a href="#ULTRAKILL">ULTRAKILL (PC)</a></small>
                 <small><a href="#Undertale">Undertale (PC)</a></small>
@@ -385,6 +388,13 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1278481800577941678">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Shahrazad"></span> Shahrazad (Meta)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/qwint/ap-shahrazad/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1191670867403476992">Link</a>]</li>
                 </ul>
                 
                 <h3><span id="SpoilerFreeTextClient"></span> Spoiler-Free Text Client (Meta)</h3>
@@ -483,7 +493,7 @@
                 <h3><span id="ANIMALWELL"></span> ANIMAL WELL (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1238463626344665119/1305263300208230420">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1238463626344665119/1316597520817852447">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/SporyTike/ANIMAL-WELL-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/blob/animal-well/worlds/animal_well/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1238463626344665119">Link</a>]</li>
@@ -519,7 +529,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Beta APWorld + Game Mod</strong> 1.4.x versions [<a href="https://github.com/tioui/Aquaria_Randomizer/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</strong> 1.5.x versions [<a href="https://github.com/tioui/Aquaria_Randomizer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/palex00/aquaria-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Aquaria/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257452465272389687">Link</a>]</li>
@@ -962,7 +972,7 @@
                 <h3><span id="FinalFantasy4"></span><span id="FinalFantasy4FreeEnterprise"></span> Final Fantasy IV (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1170144930610557008/1297275852467212299">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1170144930610557008/1318241545610334269">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/seto10987/Final-Fantasy-4-Free-Enterprise-AP-Poptracker-Pack/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170144930610557008">Link</a>]</li>
                 </ul>
@@ -1381,6 +1391,16 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170655339323080796">Link</a>]</li>
                 </ul>
 
+                <h3><span id="LoonylandHalloweenHill"></span> Loonyland: Halloween Hill (PC/Web)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/AutomaticFrenzy/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/AutomaticFrenzy/HamSandwich/releases">Link</a>]</li>
+                    <li><strong>Website</strong> [<a href="https://spacemaniac.github.io/HamSandwich/loonyland.html">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/AutomaticFrenzy/loonyland_archipelago_tracker">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1314639182655656016">Link</a>]</li>
+                </ul>
+
                 <h3><span id="Lufia2RiseOfTheSinistrals"></span><span id="Lufia2AncientCave"></span> Lufia II: Rise of the Sinistrals (SNES)</h3>
 
                 <ul>
@@ -1703,6 +1723,7 @@
                     <li><strong>APWorld</strong> [<a href="https://github.com/c-ostic/Archipelago/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/c-ostic/OriBFArchipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/5ully/OriDETracker/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/c-ostic/OriBFArchipelago/blob/main/Setup.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1036405779726610452">Link</a>]</li>
                 </ul>
 
@@ -2116,8 +2137,10 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>APWorld</strong> 0.5.1 Bug Fixes - 6.x.x releases [<a href="https://github.com/agilbert1412/StardewArchipelago/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/agilbert1412/StardewArchipelago/releases">Link</a>]</li>
                     <li><strong>Optional Game Mods</strong> [<a href="https://github.com/agilbert1412/StardewArchipelago/blob/6.x.x/Documentation/Supported%20Mods.md">Link</a>]</li>
+                    <li><strong>Alternate APWorld</strong> Tracker Client - Stardew Valley Tracker releases [<a href="https://github.com/agilbert1412/Archipelago/releases">Link</a>]</li>
                     <li><strong>Alternate APWorld + Game Mod</strong> Tilesanity - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1225426679904866324/1276505292313595914">Link</a>]</li>
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Stardew%20Valley/setup/en">Link</a>]</li>
@@ -2324,6 +2347,14 @@
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/TUNIC/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224388891948093540">Link</a>]</li>
+                </ul>
+
+                <h3><span id="TurnipBoyCommitsTaxEvasion"></span> Turnip Boy Commits Tax Evasion (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod Download</strong> [<a href="https://github.com/pointfivetee/TurnipBoyRandomizer/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/pointfivetee/TurnipBoyRandomizer/blob/main/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1297617351977734214">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Tyrian"></span> Tyrian (PC)</h3>
