--- a/index.html
+++ b/index.html
@@ -49,6 +49,66 @@
                     </p>
                 </header>
 
+                <h2 id="W202450">Week of December 9-15, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Castlevania: Symphony of the Night [<a href="apworlds.html#CastlevaniaSymphonyOfTheNight">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy IV [<a href="apworlds.html#FinalFantasy4">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Flipwitch - Forbidden Sex Hex [<a href="apworlds.html#FlipWitchForbiddenSexHex">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Golden Sun: The Lost Age [<a href="apworlds.html#GoldenSunTheLostAge">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Grim Dawn [<a href="apworlds.html#GrimDawn">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Kirby 64: The Crystal Shards [<a href="apworlds.html#Kirby64TheCrystalShards">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Osu! [<a href="apworlds.html#Osu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario [<a href="apworlds.html#PaperMario">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shadow the Hedgehog [<a href="apworlds.html#ShadowTheHedgehog">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shahrazad [<a href="apworlds.html#Shahrazad">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: Majora's Mask [<a href="apworlds.html#TheLegendOfZeldaMajorasMask">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Touhou Koumakyou: The Embodiment of Scarlet Devil [<a href="apworlds.html#TouhouKoumakyouTheEmbodimentOfScarletDevil">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> The Legend of Zelda: Link's Awakening DX [<a href="apworlds.html#TheLegendOfZeldaLinksAwakeningDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> DLC Quest [<a href="apworlds.html#DLCQuest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Grim Dawn [<a href="apworlds.html#GrimDawn">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Legend of Zelda: Majora's Mask [<a href="apworlds.html#TheLegendOfZeldaMajorasMask">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Timespinner [<a href="apworlds.html#Timespinner">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Loonyland: Halloween Hill [<a href="apworlds.html#LoonylandHalloweenHill">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game Merged</strong> Castlevania: Circle of the Moon [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3299">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202449">Week of December 2-8, 2024</h2>
 
                 <ul>
