--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
                 <ul>
                     <li><strong>New APWorld</strong> Loonyland: Halloween Hill [<a href="apworlds.html#LoonylandHalloweenHill">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Turnip Boy Commits Tax Evasion [<a href="apworlds.html#TurnipBoyCommitsTaxEvasion">Link</a>]</li>
                 </ul>
 
                 <ul>
