--- a/index.html
+++ b/index.html
@@ -49,6 +49,54 @@
                     </p>
                 </header>
 
+                <h2 id="W202451">Week of December 16-22, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> FNAF World [<a href="apworlds.html#FNAFWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shahrazad [<a href="apworlds.html#Shahrazad">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Simon Tatham's Portable Puzzle Collection [<a href="apworlds.html#SimonTathamsPortablePuzzleCollection">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Archipela-Go! [<a href="apworlds.html#Archipela-Go">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Christmas Delivery [<a href="apworlds.html#ChristmasDelivery">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Slotlock [<a href="apworlds.html#Slotlock">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game Merged</strong> Inscryption [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3621">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Don't Starve Together [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/4386">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202450">Week of December 9-15, 2024</h2>
 
                 <ul>
