--- a/apworlds.html
+++ b/apworlds.html
@@ -52,13 +52,15 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (229)</h2>
+                <h2>APWorlds (231)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
-                <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
+                <small>&emsp;<a href="#ChristmasDelivery">Christmas Delivery (Meta)</a></small>
                 <small>&emsp;<a href="#LocalYAMLCreator">Local YAML Creator (Meta)</a></small>
+                <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
                 <small>&emsp;<a href="#Shahrazad">Shahrazad (Meta)</a></small>
+                <small>&emsp;<a href="#Slotlock">Slotlock (Meta)</a></small>
                 <small>&emsp;<a href="#SpoilerFreeTextClient">Spoiler-Free Text Client (Meta)</a></small>
                 <small>&emsp;<a href="#UniversalTracker">Universal Tracker (Meta)</a></small>
                 <br />
@@ -376,11 +378,11 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1252051532971638784">Link</a>]</li>
                 </ul>
 
-                <h3><span id="Manual"></span> Manual (Meta)</h3>
+                <h3><span id="ChristmasDelivery"></span> Christmas Delivery (Meta)</h3>
 
                 <ul>
-                    <li><strong>Client</strong> [<a href="https://github.com/ManualForArchipelago/Manual/releases">Link</a>]</li>
-                    <li><strong>Discord Server</strong> [<a href="https://discord.gg/T5bcsVHByx">Link</a>]</li>
+                    <li><strong>APWorld + Game</strong> [<a href="https://github.com/ObsidianMakerDevelopment/christmasdeliveryapworld/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1317840527760298045">Link</a>]</li>
                 </ul>
 
                 <h3><span id="LocalYAMLCreator"></span> Local YAML Creator (Meta)</h3>
@@ -390,10 +392,24 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1278481800577941678">Link</a>]</li>
                 </ul>
 
+                <h3><span id="Manual"></span> Manual (Meta)</h3>
+
+                <ul>
+                    <li><strong>Client</strong> [<a href="https://github.com/ManualForArchipelago/Manual/releases">Link</a>]</li>
+                    <li><strong>Discord Server</strong> [<a href="https://discord.gg/T5bcsVHByx">Link</a>]</li>
+                </ul>
+
                 <h3><span id="Shahrazad"></span> Shahrazad (Meta)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/qwint/ap-shahrazad/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1191670867403476992">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Slotlock"></span> Slotlock (Meta)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/gjgfuj/SlotLock/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1191670867403476992">Link</a>]</li>
                 </ul>
                 
@@ -872,7 +888,7 @@
                 <ul>
                     <li><strong>APWorld + Connector</strong> [<a href="https://github.com/zakwiz/DiddyKongRacingAP/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/theUofCWildcat/DKR-Poptracker/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/zakwiz/DiddyKongRacingAP/blob/v0.1.0/worlds/diddy_kong_racing/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/zakwiz/DiddyKongRacingAP/blob/main/worlds/diddy_kong_racing/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1057754627795337387">Link</a>]</li>
                 </ul>
 
@@ -1054,7 +1070,7 @@
                 <h3><span id="FNaFWorld"></span><span id="FNAFWorld"></span> FNaF World (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1262058847397220445">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1318348706449195120">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1195152241250795590">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1187854264375193721">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1104088448127729704">Link</a>]</li>
@@ -1116,7 +1132,7 @@
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/NaixGames/Polycosmos/releases">Link</a>]</li>
                     <li><strong>Game Mods</strong> [<a href="https://github.com/SGG-Modding/ModImporter/releases">Link</a>] [<a href="https://github.com/SGG-Modding/ModUtil/releases">Link</a>] [<a href="https://github.com/SGG-Modding/StyxScribe">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/NaixGames/Polycosmos/blob/main/hades/docs/hades_en.md">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/NaixGames/Polycosmos/blob/main/README.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1142985359563685898">Link</a>]</li>
                 </ul>
 
@@ -2173,6 +2189,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/BlackSoulKnight/Tevi_Randomizer/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1320015979736203304">Link</a>]</li>
                 </ul>
 
                 <h3><span id="TheBindingOfIssacRepentance"></span> The Binding of Isaac: Repentance (PC)</h3>
@@ -2467,6 +2484,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Beta APWorld</strong> 2.2.x releases [<a href="https://github.com/spinerak/ArchipelagoYachtDice/releases">Link</a>]</li>
                     <li><strong>Website</strong> [<a href="http://yacht-dice-ap.netlify.app/">Link</a>]</li>
                     <li><strong>Game Download (HTML File)</strong> [<a href="https://github.com/spinerak/ArchipelagoYachtDice/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Yacht%20Dice/setup/en">Link</a>]</li>
