--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <li><strong>APWorld Update</strong> FNAF World [<a href="apworlds.html#FNAFWorld">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shadow the Hedgehog [<a href="apworlds.html#ShadowTheHedgehog">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Shahrazad [<a href="apworlds.html#Shahrazad">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Simon Tatham's Portable Puzzle Collection [<a href="apworlds.html#SimonTathamsPortablePuzzleCollection">Link</a>]</li>
